--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,7 +1,8 @@
 # test file for zend-opcache-dashboards
 ---
 - hosts: localhost
-  remote_user: root
+  connection: local
+  sudo: true
   roles:
     - ../../
   vars:
