--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 # meta file for zend-opcache-dashboards
 ---
 galaxy_info:
+  role_name: zend-opcache-dashboards
   author: Mischa ter Smitten
   company: Oefenweb.nl B.V.
   description: Set up Zend OPCache Dashboards
@@ -12,10 +13,12 @@ galaxy_info:
         - precise
         - trusty
         - xenial
+        - bionic
     - name: Debian
       versions:
         - wheezy
         - jessie
+        - stretch
   galaxy_tags:
     - system
     - web
