--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 ---
 galaxy_info:
   namespace: oefenweb
-  role_name: zend-opcache-dashboards
+  role_name: zend_opcache_dashboards
   author: Mischa ter Smitten
   company: Oefenweb.nl B.V.
   description: Set up Zend OPCache Dashboards
@@ -11,13 +11,11 @@ galaxy_info:
   platforms:
     - name: Ubuntu
       versions:
-        - precise
-        - trusty
         - xenial
         - bionic
+        - focal
     - name: Debian
       versions:
-        - wheezy
         - jessie
         - stretch
         - buster
